force-app/main/default/objects/AttributeSurvey__c/AttributeSurvey__c.object-meta.xml
<CustomObject>
    <label>属性調査</label>
    <nameField>
        <displayFormat>AS-{0000000}</displayFormat>
        <label>属性調査番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>