force-app/main/default/objects/AttributeSurvey__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>属性調査</relationshipLabel>
    <relationshipName>rAccount</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>