force-app/main/default/objects/AttributeSurvey__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>アクション</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>【承認依頼】</fullName>
                <default>true</default>
                <label>【承認依頼】</label>
            </value>
            <value>
                <fullName>【却下】</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>