force-app/main/default/objects/AttributeSurvey__c/fields/ApplicationForConcurrentPost__c.field-meta.xml
<CustomField>
    <fullName>ApplicationForConcurrentPost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>兼務側の申請</label>
    <type>Checkbox</type>
</CustomField>