force-app/main/default/objects/AttributeSurvey__c/fields/ApprovalAssignmentDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>ApprovalAssignmentDateAndTime__c</fullName>
    <label>承認割り当て日時</label>
    <type>DateTime</type>
</CustomField>