force-app/main/default/objects/AttributeSurvey__c/fields/ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus__c</fullName>
    <label>承認ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未申請</fullName>
                <default>true</default>
                <label>未申請</label>
            </value>
            <value>
                <fullName>所属課長</fullName>
            </value>
            <value>
                <fullName>所属部長</fullName>
            </value>
            <value>
                <fullName>業務担当</fullName>
            </value>
            <value>
                <fullName>業務課長</fullName>
            </value>
            <value>
                <fullName>業務部長</fullName>
            </value>
            <value>
                <fullName>承認済</fullName>
            </value>
            <value>
                <fullName>未承認</fullName>
                <isActive>false</isActive>
                <label>未承認</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>