force-app/main/default/objects/AttributeSurvey__c/fields/BranchOffice__c.field-meta.xml
<CustomField>
    <fullName>BranchOffice__c</fullName>
    <formula>TEXT(Owner:User.DepartmentAndDivision__c)</formula>
    <label>支社</label>
    <type>Text</type>
</CustomField>