force-app/main/default/objects/AttributeSurvey__c/fields/CheckResultJudgment__c.field-meta.xml
<CustomField>
    <fullName>CheckResultJudgment__c</fullName>
    <label>チェック結果判定</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>詳細調査</fullName>
            </value>
            <value>
                <fullName>取引可</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>