force-app/main/default/objects/AttributeSurvey__c/fields/ConcurrentManagerConcurrentPostFlag__c.field-meta.xml
<CustomField>
    <fullName>ConcurrentManagerConcurrentPostFlag__c</fullName>
    <formula>Owner:User.ConcurrentManager__r.SectionManagerGeneralManagerConcurrent__c</formula>
    <label>兼務マネージャが課長・部長兼任</label>
    <type>Checkbox</type>
</CustomField>