force-app/main/default/objects/AttributeSurvey__c/fields/DateOfExpiry__c.field-meta.xml
<CustomField>
    <fullName>DateOfExpiry__c</fullName>
    <formula>IF(AND(MONTH( LastApprovalDate__c ) = 2,DAY( LastApprovalDate__c ) = 29)
,DATE( YEAR( LastApprovalDate__c ) + 2, 2, 28)
,DATE( YEAR( LastApprovalDate__c ) + 2, MONTH( LastApprovalDate__c ), DAY( LastApprovalDate__c ) ) -1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>有効期限</label>
    <type>Date</type>
</CustomField>