force-app/main/default/objects/AttributeSurvey__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <formula>Owner:User.Department__c</formula>
    <label>所属部</label>
    <type>Text</type>
</CustomField>