force-app/main/default/objects/AttributeSurvey__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <formula>Owner:User.Division01__c</formula>
    <label>所属課</label>
    <type>Text</type>
</CustomField>