force-app/main/default/objects/AttributeSurvey__c/fields/LastApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>LastApprovalDate__c</fullName>
    <label>最終承認日</label>
    <type>Date</type>
</CustomField>