force-app/main/default/objects/AttributeSurvey__c/fields/ManagerConcurrentPostFlag__c.field-meta.xml
<CustomField>
    <fullName>ManagerConcurrentPostFlag__c</fullName>
    <formula>Owner:User.Manager.SectionManagerGeneralManagerConcurrent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>マネージャーが課長・部長兼任</label>
    <type>Checkbox</type>
</CustomField>