force-app/main/default/objects/AttributeSurvey__c/fields/OwnerFlag__c.field-meta.xml
<CustomField>
    <fullName>OwnerFlag__c</fullName>
    <formula>$User.Id =  OwnerId</formula>
    <label>所有者フラグ</label>
    <type>Checkbox</type>
</CustomField>