force-app/main/default/objects/AttributeSurvey__c/fields/ValidFlag__c.field-meta.xml
<CustomField>
    <fullName>ValidFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>有効フラグ</label>
    <type>Checkbox</type>
</CustomField>