force-app/main/default/objects/AttributeSurvey__c/fields/ValidFormula__c.field-meta.xml
<CustomField>
    <fullName>ValidFormula__c</fullName>
    <formula>IF(AND(TODAY() &lt;= DateOfExpiry__c,ValidFlag__c = True)
,True
,False
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>有効期限は最終承認日から最長で2年間。または同一企業・団体において、この伺書よりも後に提出・承認されたものがあれば、そちらの有効期限に従っても可。</inlineHelpText>
    <label>有効</label>
    <type>Checkbox</type>
</CustomField>