force-app/main/default/objects/AttributeSurvey__c/validationRules/AccountNotChangeInApproval.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountNotChangeInApproval</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
     NOT(ISPICKVAL( ApprovalStatus__c , &quot;未申請&quot;)) , 
     NOT(ISPICKVAL( ApprovalStatus__c , &quot;承認済&quot;)),
     ISCHANGED( Account__c ) )</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>申請中は編集できません</errorMessage>
</ValidationRule>