force-app/main/default/objects/AttributeSurvey__c/validationRules/CheckResultNotChangeInApproval.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckResultNotChangeInApproval</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
    AND(
         NOT(ISPICKVAL( ApprovalStatus__c , &quot;未申請&quot;)),
         NOT(ISPICKVAL( ApprovalStatus__c , &quot;所属課長&quot;)),
         NOT(ISPICKVAL( ApprovalStatus__c , &quot;所属部長&quot;)),
         NOT(ISPICKVAL( ApprovalStatus__c , &quot;承認済&quot;))) , 
         ISCHANGED(  CheckResultJudgment__c ) 
)</errorConditionFormula>
    <errorDisplayField>CheckResultJudgment__c</errorDisplayField>
    <errorMessage>申請中は編集できません</errorMessage>
</ValidationRule>