force-app/main/default/objects/AttributeSurvey__c/validationRules/ConcurrentPostNotChangeInApproval.validationRule-meta.xml
<ValidationRule>
    <fullName>ConcurrentPostNotChangeInApproval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT( ISPICKVAL( ApprovalStatus__c , &quot;未申請&quot;) ), 
    NOT( ISPICKVAL( ApprovalStatus__c , &quot;承認済&quot;) ), 
    ISCHANGED( ApplicationForConcurrentPost__c )
)</errorConditionFormula>
    <errorDisplayField>ApplicationForConcurrentPost__c</errorDisplayField>
    <errorMessage>申請中は編集できません</errorMessage>
</ValidationRule>