force-app/main/default/objects/AttributeSurvey__c/validationRules/NotConcurrentPostCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>NotConcurrentPostCheck</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( ApprovalStatus__c , &quot;未申請&quot;) ,
  ISBLANK(Owner:User.ConcurrentManager__c),
  OR(
      AND(
             NOT(PRIORVALUE( ApplicationForConcurrentPost__c )),
             ApplicationForConcurrentPost__c ),
       AND(
              ISNEW(),
              ApplicationForConcurrentPost__c)
       )
  
)</errorConditionFormula>
    <errorDisplayField>ApplicationForConcurrentPost__c</errorDisplayField>
    <errorMessage>兼務登録がないためチェックを入れることができません</errorMessage>
</ValidationRule>