force-app/main/default/objects/AttributeSurvey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ApprovalStatus__c</columns>
    <columns>CheckResultJudgment__c</columns>
    <columns>ValidFormula__c</columns>
    <columns>LastApprovalDate__c</columns>
    <columns>BranchOffice__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>