force-app/main/default/objects/AttributeSurvey__c/listViews/UnapprovedDemographicSurvey.listView-meta.xml
<ListView>
    <fullName>UnapprovedDemographicSurvey</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ApprovalStatus__c</columns>
    <columns>CheckResultJudgment__c</columns>
    <columns>ValidFormula__c</columns>
    <columns>LastApprovalDate__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ApprovalStatus__c</field>
        <operation>notEqual</operation>
        <value>承認済</value>
    </filters>
    <label>00.未承認の属性調査一覧を表示（全件）</label>
</ListView>