force-app/main/default/objects/AttributeSurvey__c/listViews/UnapprovedDemographicSurvey_kyushi.listView-meta.xml
<ListView>
    <fullName>UnapprovedDemographicSurvey_kyushi</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ApprovalStatus__c</columns>
    <columns>CheckResultJudgment__c</columns>
    <columns>ValidFormula__c</columns>
    <columns>LastApprovalDate__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ApprovalStatus__c</field>
        <operation>notEqual</operation>
        <value>承認済</value>
    </filters>
    <filters>
        <field>BranchOffice__c</field>
        <operation>contains</operation>
        <value>11_九州支社</value>
    </filters>
    <label>11.未承認の属性調査一覧を表示（九支）</label>
</ListView>